# fun-lang

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/funlang/: .gitignore  Cargo.toml
crates/funlang/src/: ast.rs  environment.rs  error.rs  errors.rs  expr.rs  functions.rs  interpreter.rs  lexer.rs  lib.rs  literal.rs  macros.rs  parser.rs  token.rs  utility.rs
crates/funlang/src/ast/: expr.rs  stmt.rs  traits.rs
crates/funlang/src/errors/: lexer_errors.rs  operation_error.rs  parser_errors.rs
crates/funlang/src/parser/: expressions.rs  visitors.rs
crates/funlang_derive/: Cargo.toml
crates/funlang_derive/src/: ast.rs  error.rs  expr.rs  generate.rs  lib.rs
crates/funlang_derive/tests/: ast_test.rs  error.rs  error_test.rs  expr.rs  expr_test.rs  expr_tests.rs  gates.rs
crates/funlang_error/: Cargo.toml
crates/funlang_error/src/: lib.rs
spec/: proto.spec.md
src/: error.rs  lib.rs  scanner.rs  token.rs
