[package]
name = "funlang_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dev-dependencies]
trybuild = { version = "1.0.85", features = ["diff"] }

[dependencies]
proc-macro2 = "1"
syn = { version = "2.0.39", features = ["full"] }
quote = "1.0"
